--- a/Calculator/packages.config
+++ b/Calculator/packages.config
@@ -3,5 +3,8 @@
   <package id="Microsoft.ServiceFabric" version="5.7.198" targetFramework="net47" />
   <package id="Microsoft.ServiceFabric.Data" version="2.7.198" targetFramework="net47" />
   <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="2.7.198" targetFramework="net47" />
+  <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.7.198" targetFramework="net47" />
   <package id="Microsoft.ServiceFabric.Services" version="2.7.198" targetFramework="net47" />
+  <package id="Microsoft.ServiceFabric.Services.Remoting" version="2.7.198" targetFramework="net47" />
+  <package id="Microsoft.ServiceFabric.Services.Wcf" version="2.7.198" targetFramework="net47" />
 </packages>
